# jubjub

./: Cargo.toml
benches/: fq_bench.rs  fr_bench.rs  point_bench.rs
src/: fr.rs  lib.rs  util.rs
tests/: common.rs  dkg.rs  fq_blackbox.rs  fr_blackbox.rs  shamir.rs
