[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Eirik Ogilvie-Wigley <eowigley@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "Implementation of the Jubjub elliptic curve group"
documentation = "https://docs.rs/jubjub/"
homepage = "https://github.com/zkcrypto/jubjub"
license = "MIT/Apache-2.0"
name = "jubjub"
repository = "https://github.com/zkcrypto/jubjub"
version = "0.10.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"], optional = false }

[dependencies.bitvec]
version = "1"
default-features = false

[dependencies.bls12_381_plus]
version = "0.8"
features = ["groups", "bits", "hashing"]
default-features = false

[dependencies.elliptic-curve]
version = "0.13"
features = ["hash2curve"]

[dependencies.ff]
version = "0.13"
default-features = false

[dependencies.group]
version = "0.13"
default-features = false

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "2.5.0"
default-features = false

[dependencies.rand_chacha]
version = "0.3"

[dev-dependencies]
criterion = "0.3"
csv = ">= 1.0, < 1.2" # csv 1.2 has MSRV 1.60
vsss-rs = "3.3.4"

[dev-dependencies.rand_xorshift]
version = "0.3"
default-features = false

[features]
default = ["std", "bits"]
std = ["alloc", "bits", "bls12_381_plus/std"]
alloc = ["ff/alloc", "group/alloc", "bls12_381_plus/alloc"]
bits = ["ff/bits"]

[[bench]]
name = "fq_bench"
harness = false

[[bench]]
name = "fr_bench"
harness = false

[[bench]]
name = "point_bench"
harness = false
