[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Eirik Ogilvie-Wigley <eowigley@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
    "Michael Lodder <redmike7@gmail.com>",
]
description = "Implementation of the Jubjub elliptic curve group"
documentation = "https://docs.rs/jubjub/"
homepage = "https://github.com/zkcrypto/jubjub"
license = "MIT/Apache-2.0"
name = "jubjub-plus"
repository = "https://github.com/LIT-Protocol/jubjub"
version = "0.10.5"
edition = "2021"

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[dependencies.bitvec]
version = "1"
default-features = false

[dependencies.bls12_381_plus]
version = "0.8.18"
features = ["groups", "pairings"]
default-features = false

[dependencies.elliptic-curve]
version = "0.13"
features = ["hash2curve"]

[dependencies.ff]
version = "0.13"
default-features = false

[dependencies.group]
version = "0.13"
default-features = false

[dependencies.rand_core]
version = "0.6"
default-features = false

[dependencies.subtle]
version = "2.6.0"
default-features = false

[dependencies.rand_chacha]
version = "0.3"
default-features = false

[dependencies.hex]
version = "0.4"
default-features = false
optional = true

[dev-dependencies]
criterion = "0.5"
csv = ">= 1.0, < 1.2" # csv 1.2 has MSRV 1.60
vsss-rs = "5.0.0-rc0"
serde_json = "1.0"
serde_bare = "0.5"

[dev-dependencies.rand_xorshift]
version = "0.3"
default-features = false

[features]
default = ["std", "bits", "serde"]
std = ["alloc", "bits", "bls12_381_plus/std"]
alloc = ["ff/alloc", "group/alloc", "bls12_381_plus/alloc"]
bits = ["ff/bits"]
serde = ["dep:serde", "hex"]

[[bench]]
name = "fq_bench"
harness = false

[[bench]]
name = "fr_bench"
harness = false

[[bench]]
name = "point_bench"
harness = false
